# Proto-Control

./: .gitattributes  .gitignore  LICENSE  README.md  flake.nix
.github/workflows/: release.yml
daemon/: Cargo.toml  build.rs
daemon/src/: config.rs  discord.rs  gui.rs  main.rs  midi.rs  pipewire.rs  protocol.rs  teamspeak.rs  tray.rs
ts3plugin/: Makefile  protocontrol_ts3.c  rotocontrol_ts3.c
ts3plugin/inc/: NOTICE  plugin_definitions.h  ts3_functions.h
ts3plugin/inc/teamlog/: logtypes.h
ts3plugin/inc/teamspeak/: clientlib_publicdefinitions.h  public_definitions.h  public_rare_definitions.h
