[package]
name = "rotocontrol"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4"
midir = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libc = "0.2"
toml = "0.8"
dirs = "6"
ctrlc = "3"
ksni = { version = "0.3", features = ["blocking"] }
png = "0.17"
log = "0.4"
env_logger = "0.11"
iced = { version = "0.13", default-features = false, features = ["tiny-skia", "fira-sans", "auto-detect-theme"] }
