[package]
name = "proto-control"
version = "1.1.1"
edition = "2024"
description = "Daemon for the Melbourne Instruments Roto-Control device — PipeWire volume, Discord, and TeamSpeak voice integration"
license = "MIT"
repository = "https://github.com/Orbsa/Proto-Control"

[dependencies]
serialport = "4"
midir = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libc = "0.2"
toml = "1.1"
dirs = "6"
ctrlc = "3"
ksni = { version = "0.3", features = ["blocking"] }
png = "0.18"
log = "0.4"
env_logger = "0.11"
iced = { version = "0.13", default-features = false, features = ["tiny-skia", "fira-sans", "auto-detect-theme"] }
ureq = { version = "3", features = ["json"] }
